Change header position fixed, but switch still overlaps

--- a/css/general_Style.css
+++ b/css/general_Style.css
@@ -11,6 +11,7 @@ a {
 }
 body {
     background-color: rgb(238,238,238);
+    scroll-padding-top: 80px;
 }
 div{
     background-color: white;
@@ -22,6 +23,7 @@ div{
     margin-right: 10px;
 }
 .master-header{
+    position: fixed;
     background-color: white;
     display: flex;
     justify-content: space-between;
@@ -73,9 +75,10 @@ div{
     align-self: center;
     grid-gap: 20px;
     max-width: 1700px;
-    padding: 20px 10px;
+    padding: 80px 10px;
     margin: 0 auto;
     background-color: rgb(247, 247, 247);
+    
 }
 .left-container{
    
